Fixed a lot of things. I restructured a bit of the code so that it fits together a bit nicer. I feel like class headers shouldn't include other class headers, only the source files. The headers should just forward declare what they want, which means no cyclical errors can occur. Then, I added a menu which allows a point score to be added. Finally, I added a simple AI that follows the ball, with varying speeds of difficulty. I want to make a smarter one for hard and impossible settings, but for now it's alright.

--- a/Pong/Pong.vcxproj
+++ b/Pong/Pong.vcxproj
@@ -142,12 +142,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AI.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Pong.h" />
     <ClInclude Include="rlutil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AI.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Paddle.cpp" />
